apps/automation/n8n/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: n8n
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  tls:
    - hosts: ["automation.172.30.1.115.nip.io"]
      secretName: wildcard-dev-tls
  rules:
    - host: automation.172.30.1.115.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: n8n
                port:
                  number: 80
